fixed the shift input for caesar

--- a/src/app.css
+++ b/src/app.css
@@ -69,6 +69,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 /* Hide arrows in Firefox */
 input[type=number] {
+    appearance: var(--text-fade);
     -moz-appearance: textfield;
 }
 
